[package]
name = "nexus-example-closing-the-books"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
nexus = { path = "../../crates/nexus", features = ["derive", "testing"] }
thiserror = { workspace = true }
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }
