[package]
name = "nexus-example-fjall-end-to-end"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
bytes.workspace = true
futures.workspace = true
nexus = { path = "../../crates/nexus", features = ["derive"] }
# json    → built-in JsonCodec + a default-codec `store.repository()`
# cbor    → the CBOR backup box (implies import + export)
# subscription → the catch-up + live-tail cursor
nexus-store = { path = "../../crates/nexus-store", features = [
    "json",
    "cbor",
    "subscription",
] }
# export + import → FjallStore's StreamLister + AtomicAppend impls (#220)
nexus-fjall = { path = "../../crates/nexus-fjall", features = [
    "export",
    "import",
] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = [
    "macros",
    "rt-multi-thread",
    "time",
    "sync",
] }
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[lints]
workspace = true
