[package]
name = "nexus-example-projection-tokio"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
bytes.workspace = true
futures.workspace = true
nexus = { path = "../../crates/nexus", features = ["derive"] }
nexus-store = { path = "../../crates/nexus-store", features = ["projection", "testing"] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
