[package]
name = "nexus-example-store-and-kernel"
version = "0.0.0"
edition.workspace = true
publish = false

[dependencies]
nexus = { path = "../../crates/nexus", features = ["derive"] }
nexus-store = { path = "../../crates/nexus-store" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
workspace-hack = { version = "0.1", path = "../../crates/workspace-hack" }
